--- a/spy/templates/index.html
+++ b/spy/templates/index.html
@@ -6,3 +6,51 @@
             alert("Copied the text: " + copyText.value);
         }
     </script>
+
+    <div class="container-fluid">
+        <div id="demo" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+            </ul>
+            <!-- The slideshow -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="lpo img-fluid" src="{% static 'css/pic1.jpg' %}">
+                    <div class="carousel-caption">
+                        <h2>Espy.</h2>
+                         <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+                                <input type="text" class="form-control" placeholder="Search Image" name="image">
+                         </form>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="lpo img-fluid" src="{% static 'css/pic3.jpg' %}">
+                    <div class="carousel-caption">
+                        <h2>Espy</h2>
+                        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+                                <input type="text" class="form-control" placeholder="Search Image" name="image">
+                         </form>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="lpo img-fluid" src="{% static 'css/pic4.jpg' %}   ">
+                    <div class="carousel-caption">
+                        <h2>Espy</h2>
+                        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+                                <input type="text" class="form-control center" placeholder="Search Image" name="image">
+                         </form>
+                    </div>
+                </div>
+            </div>
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+    </div>
