--- a/spy/templates/index.html
+++ b/spy/templates/index.html
@@ -128,3 +128,38 @@
               {% endfor %}
           </div>
 
+
+        {% for image_item  in images %}
+            <!-- Modal -->
+            <div class="modal fade" id="{{image_item.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalCenterTitle">{{ image_item.image_name }}</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+
+                            <img class="img-responsive modal-image" id="gmi" src="{{image_item.image.url}}" alt="image">
+                            <br>
+                            <p><span class="modal-span">Location:</span> <br> {{image_item.location}}</p>
+                            <br>
+                            <p><span class="modal-span">Category:</span> <br> {{image_item.category}}</p>
+                            <br>
+
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <input class="form-control" type="text" value="{{ image_item.image.url }}" id="link">
+                            <a onclick="myFunction()"><button type="button"  class="btn btn-primary">Copy Link</button></a>
+                            <a href="{% url 'image' image_item.id %}" class="btn btn-primary">See photo</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+{% endblock %}
