--- a/spy/templates/index.html
+++ b/spy/templates/index.html
@@ -1,3 +1,16 @@
+{% extends 'base.html' %}
+
+
+
+{% block content %}
+    {% load bootstrap4 %}
+    {% load static %}
+
+    {% block styles %}
+        {% bootstrap_css %}
+        <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    {% endblock %}
+
     <script>
         function myFunction() {
             var copyText = document.getElementById("link");
@@ -163,3 +176,4 @@
         {% endfor %}
     </div>
 {% endblock %}
+
